# pymopsmap

./: .gitignore  .pre-commit-config.yaml  README.md  output.nc  pyproject.toml
config/: logging.yaml
data/cams/: cams_aer_microphysical_parameters.nc  cams_aerosols_optical_properties.nc
src/pymopsmap/: main.py
src/pymopsmap/adapt/: __init__.py  cams_to_microparams.py  optiprops_to_smartg.py
src/pymopsmap/classes/: __init__.py  microparams.py  mode.py  optiprops.py  psd.py  refractive_index.py  shape.py  wavelength.py
src/pymopsmap/core/: __init__.py  formatting.py  temp.py
src/pymopsmap/mopsmap/: __init__.py  commands.py  launch_file_format.py  launcher.py  output_format.py
src/pymopsmap/utils/: __init__.py  logging.py  temp.py  types.py  xr_utils.py
tests/: test_cams_to_microparams.py  test_commands.py  test_launch_file_formatting.py  test_microparams.py  test_mode.py  test_psd.py  test_refractive_index.py  test_shape.py  test_wavelength.py
tests/data/cams/: cams_aer_modes_concentrations.json  cams_aer_modes_concentrations_wrong.json
